removes Scenarios throughout and updates Lifetime explanation

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -35,6 +35,8 @@
 <ul><li><a href="technology/pv_residential_large.html">technology.pv_residential_large</a></li>
 <li><a href="technology/pv_residential_simple.html">technology.pv_residential_simple</a></li>
 <li><a href="technology/simple_electrolysis.html">technology.simple_electrolysis</a></li>
+<li><a href="technology/technology_a_model.html">technology.technology_a_model</a></li>
+<li><a href="technology/technology_m_model.html">technology.technology_m_model</a></li>
 <li><a href="technology/transport_model.html">technology.transport_model</a></li>
 <li><a href="technology/tutorial_basic.html">technology.tutorial_basic</a></li>
 <li><a href="technology/tutorial_biorefinery.html">technology.tutorial_biorefinery</a></li>
