--- a/genindex.html
+++ b/genindex.html
@@ -83,6 +83,10 @@
 </li>
         <li><a href="technology.html#technology.simple_electrolysis.capital_cost">(in module technology.simple_electrolysis)</a>
 </li>
+        <li><a href="technology.html#technology.technology_a_model.capital_cost">(in module technology.technology_a_model)</a>
+</li>
+        <li><a href="technology.html#technology.technology_m_model.capital_cost">(in module technology.technology_m_model)</a>
+</li>
         <li><a href="technology.html#technology.transport_model.capital_cost">(in module technology.transport_model)</a>
 </li>
         <li><a href="technology.html#technology.tutorial_basic.capital_cost">(in module technology.tutorial_basic)</a>
@@ -140,20 +144,6 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tyche.html#tyche.EpsilonConstraints.EpsilonConstraintOptimizer">EpsilonConstraintOptimizer (class in tyche.EpsilonConstraints)</a>
 </li>
-      <li>
-    eutychia
-
-      <ul>
-        <li><a href="eutychia.html#module-eutychia">module</a>
-</li>
-      </ul></li>
-      <li>
-    eutychia.example
-
-      <ul>
-        <li><a href="eutychia.html#module-eutychia.example">module</a>
-</li>
-      </ul></li>
       <li><a href="tyche.html#tyche.Designs.Designs.evaluate">evaluate() (tyche.Designs.Designs method)</a>
 
       <ul>
@@ -164,13 +154,13 @@
 </li>
       <li><a href="tyche.html#tyche.Evaluator.Evaluator.evaluate_corners_wide">evaluate_corners_wide() (tyche.Evaluator.Evaluator method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tyche.html#tyche.Investments.Investments.evaluate_investments">evaluate_investments() (tyche.Investments.Investments method)</a>
 </li>
-      <li><a href="tyche.html#tyche.Designs.Designs.evaluate_scenarios">evaluate_scenarios() (tyche.Designs.Designs method)</a>
-</li>
       <li><a href="tyche.html#tyche.Evaluator.Evaluator.evaluate_statistic">evaluate_statistic() (tyche.Evaluator.Evaluator method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tyche.html#tyche.Designs.Designs.evaluate_tranche_impacts">evaluate_tranche_impacts() (tyche.Designs.Designs method)</a>
 </li>
       <li><a href="tyche.html#tyche.Investments.Investments.evaluate_tranches">evaluate_tranches() (tyche.Investments.Investments method)</a>
 </li>
@@ -198,6 +188,10 @@
         <li><a href="technology.html#technology.pv_residential_simple.fixed_cost">(in module technology.pv_residential_simple)</a>
 </li>
         <li><a href="technology.html#technology.simple_electrolysis.fixed_cost">(in module technology.simple_electrolysis)</a>
+</li>
+        <li><a href="technology.html#technology.technology_a_model.fixed_cost">(in module technology.technology_a_model)</a>
+</li>
+        <li><a href="technology.html#technology.technology_m_model.fixed_cost">(in module technology.technology_m_model)</a>
 </li>
         <li><a href="technology.html#technology.transport_model.fixed_cost">(in module technology.transport_model)</a>
 </li>
@@ -285,6 +279,10 @@
 </li>
         <li><a href="technology.html#technology.simple_electrolysis.metrics">(in module technology.simple_electrolysis)</a>
 </li>
+        <li><a href="technology.html#technology.technology_a_model.metrics">(in module technology.technology_a_model)</a>
+</li>
+        <li><a href="technology.html#technology.technology_m_model.metrics">(in module technology.technology_m_model)</a>
+</li>
         <li><a href="technology.html#technology.transport_model.metrics">(in module technology.transport_model)</a>
 </li>
         <li><a href="technology.html#technology.tutorial_basic.metrics">(in module technology.tutorial_basic)</a>
@@ -300,10 +298,6 @@
     module
 
       <ul>
-        <li><a href="eutychia.html#module-eutychia">eutychia</a>
-</li>
-        <li><a href="eutychia.html#module-eutychia.example">eutychia.example</a>
-</li>
         <li><a href="technology.html#module-technology">technology</a>
 </li>
         <li><a href="technology.html#module-technology.pv_residential_large">technology.pv_residential_large</a>
@@ -311,6 +305,10 @@
         <li><a href="technology.html#module-technology.pv_residential_simple">technology.pv_residential_simple</a>
 </li>
         <li><a href="technology.html#module-technology.simple_electrolysis">technology.simple_electrolysis</a>
+</li>
+        <li><a href="technology.html#module-technology.technology_a_model">technology.technology_a_model</a>
+</li>
+        <li><a href="technology.html#module-technology.technology_m_model">technology.technology_m_model</a>
 </li>
         <li><a href="technology.html#module-technology.transport_model">technology.transport_model</a>
 </li>
@@ -408,6 +406,10 @@
 </li>
         <li><a href="technology.html#technology.simple_electrolysis.production">(in module technology.simple_electrolysis)</a>
 </li>
+        <li><a href="technology.html#technology.technology_a_model.production">(in module technology.technology_a_model)</a>
+</li>
+        <li><a href="technology.html#technology.technology_m_model.production">(in module technology.technology_m_model)</a>
+</li>
         <li><a href="technology.html#technology.transport_model.production">(in module technology.transport_model)</a>
 </li>
         <li><a href="technology.html#technology.tutorial_basic.production">(in module technology.tutorial_basic)</a>
@@ -500,6 +502,20 @@
 </li>
       </ul></li>
       <li>
+    technology.technology_a_model
+
+      <ul>
+        <li><a href="technology.html#module-technology.technology_a_model">module</a>
+</li>
+      </ul></li>
+      <li>
+    technology.technology_m_model
+
+      <ul>
+        <li><a href="technology.html#module-technology.technology_m_model">module</a>
+</li>
+      </ul></li>
+      <li>
     technology.transport_model
 
       <ul>
@@ -527,10 +543,10 @@
         <li><a href="technology.html#module-technology.utility_pv">module</a>
 </li>
       </ul></li>
-      <li><a href="tyche.html#tyche.Investments.Investments.tranches">tranches (tyche.Investments.Investments attribute)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tyche.html#tyche.Investments.Investments.tranches">tranches (tyche.Investments.Investments attribute)</a>
+</li>
       <li>
     tyche
 
@@ -620,9 +636,9 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="tyche.html#tyche.Designs.Designs.vectorize_parameters">vectorize_parameters() (tyche.Designs.Designs method)</a>
 </li>
-      <li><a href="tyche.html#tyche.Designs.Designs.vectorize_scenarios">vectorize_scenarios() (tyche.Designs.Designs method)</a>
-</li>
       <li><a href="tyche.html#tyche.Designs.Designs.vectorize_technologies">vectorize_technologies() (tyche.Designs.Designs method)</a>
+</li>
+      <li><a href="tyche.html#tyche.Designs.Designs.vectorize_tranches">vectorize_tranches() (tyche.Designs.Designs method)</a>
 </li>
   </ul></td>
 </tr></table>
